--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "d3": "^7.8.5",
+    "json-editor-vue": "^0.10.6",
+    "vanilla-jsoneditor": "^0.17.8",
+    "vue": "^3.2.13",
+    "vue-json-pretty": "^2.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
